# sparccelerator

./: .gitignore  build.sbt
src/main/scala/euclidean/: Mapper.scala  Mapper2.scala  Sparccelerator.scala
src/main/scala/groups/: SparcceleratorCol.scala
src/main/scala/math/: Reduce.scala  Reduce3.scala  Sparccelerator3Col.scala  Sparccelerator3Row.scala  SparcceleratorCol.scala
src/main/scala/sum/: ReduceSum.scala  Sparccelerator.scala
src/main/scala/tpchsum/: ReduceSum.scala  Sparccelerator.scala  SparcceleratorArrow.scala  SparcceleratorCol.scala
src/native/: CMakeLists.txt  euclidean.c  minmax.c  minmax3.c  minmax3row.c  test.c  tpchsum.c  tpchsumcol.c  tpchsumtuple2.c  tpchsumtuple2_test.c
src/native/include/: euclidean_Sparccelerator_NativeMethod__.h  sum_Sparccelerator_NativeMethod__.h  tpchsum_Sparccelerator_NativeMethod__.h
